--- a/view/frontend/web/css/testimonials.less
+++ b/view/frontend/web/css/testimonials.less
@@ -385,3 +385,36 @@
     transform: translate3d(0, 0, 0);
   }
 }
+
+//toggle-less-more
+.testimonial-message {
+  max-height: none;
+  position: relative;
+  max-height: none;
+  border-bottom: 1px solid #d1d1d1;
+ 
+  &.collapsed {
+    max-height: 200px;
+    overflow: hidden;
+ 
+    &:after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 160px;
+      z-index: 1;
+      display: block;
+      bottom: 0;
+ 
+      background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+      background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+      background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+    }
+  }
+}
+ 
+#toggle-description {
+  margin-top: 20px;
+  display: inline-block;
+}
