add FilterProvider for displaying widget code some css style

--- a/view/frontend/templates/widgets/slider.phtml
+++ b/view/frontend/templates/widgets/slider.phtml
@@ -16,7 +16,7 @@
                 <figure class="testimonial">
                     <blockquote>
 												<div class="testimonial-message" id="testimonial-<?= $testimonial->getTestimonialId(); ?>" data-mage-init='{"testimonial-message-slick":{"contentMaxHeight":200}}'>
-                        <?= $block->escapeHtml($testimonial->getMessage()); ?>
+                        <?= /* @noEscape */ $block->getCmsFilterContent($testimonial->getMessage()); ?>
 												</div>
                         <div class="arrow"></div>
                     </blockquote>
