--- a/view/frontend/templates/widgets/sidelist.phtml
+++ b/view/frontend/templates/widgets/sidelist.phtml
@@ -5,7 +5,7 @@ if (!count($testimonials)) {
 }
 ?>
 
-<div class="widget block block-testimonials <?php if ($block->getHideBlockDesign()): ?>empty-design<?php endif ?>" id="testimonialsList">
+<div class="widget block block-testimonials testimonials-sidelist <?php if ($block->getHideBlockDesign()): ?>empty-design<?php endif ?>" id="testimonialsList">
     <div class="block-title">
         <strong><?php echo __('Testimonials') ?></strong>
     </div>
@@ -29,7 +29,7 @@ if (!count($testimonials)) {
                                 </div>
                             </div>
                         <?php endif ?>
-                        <div class="testimonial-message"><?php echo $block->escapeHtml($testimonial->getMessage()); ?></div>
+                        <div class="testimonial-message"><?= /* @noEscape */ $block->getCmsFilterContent($testimonial->getMessage()); ?></div>
                     </div>
                     <div class="name"><?php echo $block->escapeHtml($testimonial->getName()); ?></div>
                     <a class="read-more" href="#"><?php echo __('Read more') ?></a>
