--- a/view/frontend/web/css/testimonials.less
+++ b/view/frontend/web/css/testimonials.less
@@ -340,6 +340,17 @@
     }
 }
 
+.testimonials-sidelist {
+		.block-content {
+				.testimonial-message {
+						h2 {
+								font-weight: 600;
+								font-size: 1.6rem;
+						}
+				}
+		}
+}
+
 .std .testimonialForm li {
     list-style: none;
 }
